# task_manager

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: main.py
src/api/: auth.py
src/core/: config.py
src/models/: auth.py
tests/: conftest.py
tests/api/: test_health_check.py
